@@ -8,7 +8,7 @@ importFrom(ape, as.DNAbin, as.phylo, plot.phylo, as.prop.part, nj,old2new.phylo,
     nodelabels, edgelabels, BOTHlabels, read.nexus.data, write.nexus.data, 
     read.dna, write.dna, reorder.phylo, dist.nodes, collapse.singles, rotate)
 importFrom(Matrix, Matrix, sparseMatrix, spMatrix)
-importFrom(igraph, graph, graph.adjacency, layout.kamada.kawai, set.edge.attribute, vcount, as.igraph) 
+importFrom(igraph, graph, graph.adjacency, layout.kamada.kawai, set.edge.attribute, vcount) 
 importFrom(stats, AIC, logLik, reorder) 
 importFrom(fastmatch, fmatch)
 importFrom(rgl, open3d, segments3d, spheres3d, rgl.texts)
@@ -38,7 +38,7 @@ S3method(unique, phyDat)
 S3method(as.matrix, splits)
 S3method(as.Matrix, splits) 
 S3method(as.networx, splits)
-S3method(as.igraph, networx)
+#S3method(as.igraph, networx)
 S3method(as.phyDat, DNAbin)
 S3method(as.phyDat, alignment)
 S3method(as.phyDat, data.frame)
